fix heading alignment to center

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -42,6 +42,7 @@ blockquote {
   font-size: 1.5rem;
   letter-spacing: 0.2rem;
   text-transform: uppercase;
+  text-align: center;
   margin-bottom: 3rem;
   @media only screen and (min-width: 900px) {
     font-size: 2rem;
